tests/algorithms/x/Pascal/ciphers/base85.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/ciphers/base85.pas
base85.pas(176,93) Error: Incompatible type for arg no. 1: Got "LongInt", expected "ShortString"
base85.pas(175,7) Error: Incompatible types: got "Char" expected "LongInt"
base85.pas(258) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
